tests/ui/infinite/infinite-vec-type-recursion.gated.stderr
error[E0391]: cycle detected when expanding type alias `X`
  --> $DIR/infinite-vec-type-recursion.rs:6:1
   |
LL | type X = Vec<X>;
   | ^^^^^^
   |
note: ...which requires computing type and type-dependent definitions of `X`...
  --> $DIR/infinite-vec-type-recursion.rs:6:14
   |
LL | type X = Vec<X>;
   |              ^
   = note: ...which again requires expanding type alias `X`, completing the cycle
note: cycle used when checking that `X` is well-formed
  --> $DIR/infinite-vec-type-recursion.rs:6:1
   |
LL | type X = Vec<X>;
   | ^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
